added tablet version of the site

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
       <picture class="header__img">
         <source
-          media="(max-width: 1440px)"
+          media="(max-width: 1200px)"
           srcset="./images/header_imgSmall.svg"
         >
         <img src="./images/header_imgBig.svg" alt="a photo of a museum">
@@ -145,36 +145,47 @@
       <h2 class="gallery__title">
         Галерея
       </h2>
-      <img
-        class="gallery__img-1"
-        src="./images/gallery_1.svg"
-        alt="a picture of an women"
-      >
-      <img
-        class="gallery__img-2"
-        src="./images/gallery_2.svg"
-        alt="a picture of a winter village"
-      >
-      <img
-        class="gallery__img-3"
-        src="./images/gallery_3.svg"
-        alt="a picture of geese"
-      >
-      <img
-        class="gallery__img-4"
-        src="./images/gallery_4.svg"
-        alt="a picture of a park"
-      >
-      <img
-        class="gallery__img-5"
-        src="./images/gallery_5.svg"
-        alt="a picture of sea"
-      >
-      <img
-        class="gallery__img-6"
-        src="./images/gallery_6.svg"
-        alt="a picture of people"
-      >
+
+      <div class="gallery__wrapper">
+        <img
+          class="gallery__img-1"
+          src="./images/gallery_1.svg"
+          alt="a picture of an women"
+        >
+        <img
+          class="gallery__img-2"
+          src="./images/gallery_2.svg"
+          alt="a picture of a winter village"
+        >
+        <img
+          class="gallery__img-3"
+          src="./images/gallery_3.svg"
+          alt="a picture of geese"
+        >
+        <img
+          class="gallery__img-4"
+          src="./images/gallery_4.svg"
+          alt="a picture of a park"
+        >
+        <img
+          class="gallery__img-5"
+          src="./images/gallery_5.svg"
+          alt="a picture of sea"
+        >
+        <img
+          class="gallery__img-6"
+          src="./images/gallery_6.svg"
+          alt="a picture of people"
+        >
+      </div>
+
+      <div class="gallery__switcher">
+        <div class="gallery__point"></div>
+        <div class="gallery__point"></div>
+        <div class="gallery__point"></div>
+        <div class="gallery__point"></div>
+      </div>
+
     </div>
 
     <div class="subscription page__block" id="subscription">
@@ -240,7 +251,7 @@
           <br>
           <span class="footer__time">12:00— 20:00</span> неділя
         </p>
-        <p class="footer__text">
+        <p class="footer__text footer__text--weekends">
           Вихідні понеділок, вівторок
           Каса припиняє роботу за 1 годину
           до закриття музею
