adaptive page without burger

--- a/src/index.html
+++ b/src/index.html
@@ -14,61 +14,34 @@
 
   <body>
 
-    <section class="page">
-      <header class="page__header header">
-        <div class="header__sidebar sidebar">
-
-          <aside class="sidebar__left left">
-
-            <div class="left__nav nav">
-              <input
-                type="checkbox"
-                class="nav__toggler"
-                id="nav-toggler"
-              >
-              <label for="nav-toggler" class="nav__label label">
-                <span></span>
-                <span></span>
-                <span></span>
-              </label>
-              <span class="nav__logo">NA <br> MU</span>
-            </div>
-          </aside>
-
-          <aside class="sidebar__menu-image menu-image">
-            <div class="menu-image__block block block--desktop">
-
-              <h1 class="menu-image__text">ХУДОЖ<span>НІЙ</span>
-                <br>
-                МУЗЕЙ
-              </h1>
-              <div class="tickets">
-                <div class="tickets__option option">
-                  <p class="option__text"> КВИТКИ</p>
-                </div>
-                <div class="tickets__button tickets__button--primary"></div>
-              </div>
-            </div>
-          </aside>
-
+    <section class="header">
+      <div class="header__content">
+        <div class="header__main-title">
+          <h2 class="header__title">
+            ХУДОЖ<span class="header__stroke">НІЙ</span>
+            <br>
+            МУЗЕЙ
+          </h2>
         </div>
-      </header>
+
+        <div class="header__ticket ticket">
+          <a class="ticket__side">Квитки</a>
+          <a class="ticket__button">
+            <img
+            class="ticket__svg"
+            src="./images/Vector.svg"
+            alt=""
+            >
+          </a>
+        </div>
+      </div>
+      <p class="header__element"></p>
+
+      <div class="header__image">
+      </div>
     </section>
 
     <section class="main-events container">
-      <div class="menu-image__block block block--mobile">
-
-        <h1 class="menu-image__text">ХУДОЖНІЙ
-          <br>
-              МУЗЕЙ
-        </h1>
-        <div class="tickets">
-          <div class="tickets__option option">
-            <p class="option__text"> КВИТКИ</p>
-          </div>
-          <div class="tickets__button tickets__button--primary"></div>
-        </div>
-      </div>
       <h2 class="main-events__header">Актуальні події</h2>
 
       <div class="wrap-event">
