added mobile version of the site

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,11 @@
           media="(max-width: 1200px)"
           srcset="./images/header_imgSmall.svg"
         >
-        <img src="./images/header_imgBig.svg" alt="a photo of a museum">
+        <img
+          class="header__imgItem"
+          src="./images/header_imgBig.svg"
+          alt="a photo of a museum"
+        >
       </picture>
 
       <h1 class="header__title">
@@ -36,6 +40,13 @@
       <span class="header__decoration">
         ній
       </span>
+
+      <h1 class="header__title2">
+        Художній
+        <br>
+        музей
+      </h1>
+
 
       <a class="header__button">
         квитки
@@ -60,7 +71,11 @@
             media="(max-width: 1440px)"
             srcset="./images/events_oneSmall.svg"
           >
-          <img src="./images/events_oneBig.svg" alt="a picture of a rock and a tree">
+          <img
+            class="events__imgItem"
+            src="./images/events_oneBig.svg"
+            alt="a picture of a rock and a tree"
+          >
         </picture>
 
         <div class="events__container">
@@ -90,7 +105,11 @@
             media="(max-width: 1440px)"
             srcset="./images/events_twoSmall.svg"
           >
-          <img src="./images/events_twoBig.svg" alt="a picture of a rock and a tree">
+          <img
+            class="events__imgItem"
+            src="./images/events_twoBig.svg"
+            alt="a picture of a rock and a tree"
+          >
         </picture>
 
         <div class="events__container">
@@ -119,11 +138,22 @@
     </div>
 
     <div class="lection page__block">
-      <img
-        class="lection__img"
-        src="./images/lection_img.svg"
-        alt="a picture of sunset"
-      >
+
+      <picture class="header__img">
+        <source
+          media="(max-width: 700px)"
+          srcset="./images/lection_imgMedium.svg"
+        >
+        <source
+          media="(max-width: 500px)"
+          srcset="./images/lection_imgSmall.svg"
+        >
+        <img
+          class="lection__img"
+          src="./images/lection_img.svg"
+          alt="a picture of sunset"
+        >
+      </picture>
 
       <div class="lection__container">
         <div class="lection__typeDate">
@@ -148,42 +178,42 @@
 
       <div class="gallery__wrapper">
         <img
-          class="gallery__img-1"
+          class="gallery__img gallery__img-1"
           src="./images/gallery_1.svg"
           alt="a picture of an women"
         >
         <img
-          class="gallery__img-2"
+          class="gallery__img gallery__img-2"
           src="./images/gallery_2.svg"
           alt="a picture of a winter village"
         >
         <img
-          class="gallery__img-3"
+          class="gallery__img gallery__img-3"
           src="./images/gallery_3.svg"
           alt="a picture of geese"
         >
         <img
-          class="gallery__img-4"
+          class="gallery__img gallery__img-4"
           src="./images/gallery_4.svg"
           alt="a picture of a park"
         >
         <img
-          class="gallery__img-5"
+          class="gallery__img gallery__img-5"
           src="./images/gallery_5.svg"
           alt="a picture of sea"
         >
         <img
-          class="gallery__img-6"
+          class="gallery__img gallery__img-6"
           src="./images/gallery_6.svg"
           alt="a picture of people"
         >
       </div>
 
       <div class="gallery__switcher">
-        <div class="gallery__point"></div>
-        <div class="gallery__point"></div>
-        <div class="gallery__point"></div>
-        <div class="gallery__point"></div>
+        <button class="gallery__point"></button>
+        <button class="gallery__point"></button>
+        <button class="gallery__point"></button>
+        <button class="gallery__point"></button>
       </div>
 
     </div>
