--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,58 @@
 
   <body class="page">
 
-    <div class="header page__block">
+    <div class="nav">
+      <input
+        class="nav__navCheckbox"
+        type="checkbox"
+        id="nav__switcher"
+      >
 
-      <p class="header__abbr">
-        NA
-        <br>
-        MU
-      </p>
+      <label class="nav__navSwitcher" for="nav__switcher">
+        <div class="nav__navLine nav__navLine--first"></div>
+        <div class="nav__navLine nav__navLine--second"></div>
+        <div class="nav__navLine nav__navLine--third"></div>
+        <div class="nav__navLine nav__navLine--fourth"></div>
+      </label>
+
+      <nav class="nav__bar">
+        <p class="nav__abbr">
+          NA
+          <br>
+          MU
+        </p>
+
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#gallery">Галерея</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#events">Виставки та події</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#lection">Відвідування</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#subscription">Стати нашим другом</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="">Про Нас</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="">Магазин</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="">Блог</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#footer">Контакти</a>
+          </li>
+        </ul>
+
+      </nav>
+    </div>
+
+    <div class="header page__block" id="header">
 
       <picture class="header__img">
         <source
@@ -137,7 +182,7 @@
 
     </div>
 
-    <div class="lection page__block">
+    <div class="lection page__block" id="lection">
 
       <picture class="header__img">
         <source
@@ -249,7 +294,7 @@
 
     </div>
 
-    <footer class="footer page__block page__block-footer">
+    <footer class="footer page__block page__block-footer" id="footer">
 
       <p class="footer__abbr">
         NA
