fixed horizontal scroll, letters design in article and links

--- a/src/index.html
+++ b/src/index.html
@@ -302,9 +302,11 @@
         Контакти:
         <br><br>
         вул. М. Грушевського, 6; Київ, 01001<br>
-        тел. +38 (044) 278-13-57<br>
-        факс +38 (044) 278-74-54<br>
-        e-mail: info@namu.kiev.ua
+        <a href="mailto:+380442781357">тел. +38 (044) 278-13-57</a>
+        <br>
+        <a href="mailto:+380442787454">факс +38 (044) 278-74-54</a>
+        <br>
+        <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
       </p>
 
       <div class="footer__line"></div>
