--- a/src/index.html
+++ b/src/index.html
@@ -97,11 +97,11 @@
         квитки
       </a>
 
-      <div class="header__nameContainer">
+      <a href="#events" class="header__nameContainer">
         <p class="header__name">
           події
         </p>
-      </div>
+      </a>
 
     </div>
 
@@ -342,11 +342,17 @@
           <br>
           Київ, 01001
           <br>
-          тел. +38 (044) 278-13-57
+          <a class="footer__text" href="tel:+380442781357">
+            тел. +38 (044) 278-13-57
+          </a>
           <br>
-          факс +38 (044) 278-74-54
+          <a class="footer__text" href="tel:+380442787454">
+            факс +38 (044) 278-74-54
+          </a>
           <br>
-          e-mail: info@namu.kiev.ua
+          <a class="footer__text" href="mailto:info@namu.kiev.ua">
+            e-mail: info@namu.kiev.ua
+          </a>
         </p>
       </div>
 
