--- a/src/index.html
+++ b/src/index.html
@@ -67,10 +67,6 @@
       <div class="cutaway container__cutaway">
         <div class="cutaway__image">
           <h1 class="cutaway__image-name">ХУДОЖ<span class="cutaway__image-transparent">НІЙ</span> МУЗЕЙ</h1>
-          <!-- <div class="cutaway__ticket">
-            <a href="#bottom" class="cutaway__ticket-text">КВИТКИ</a>
-            <a href="#bottom" class="cutaway__ticket-button"></a>
-          </div> -->
           <div class="cutaway__decor">
             ПОДІЇ
           </div>
@@ -230,11 +226,23 @@
           <div class="footer__contacts-name">
             Контакти:
           </div>
-          <div class="footer__contacts-description">
-            вул. М. Грушевського, 6; Київ, 01001 <br>
-            тел. +38 (044) 278-13-57 <br>
-            факс +38 (044) 278-74-54 <br>
-            e-mail: info@namu.kiev.ua <br>
+          <div>
+            <a class="footer__contacts-description" href="#">
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <br>
+            <a class="footer__contacts-description" href="tel:+380442781357">
+              тел. +38 (044) 278-13-57
+            </a>
+            <br>
+            <a class="footer__contacts-description" href="">
+              факс +38 (044) 278-74-54
+            </a>
+            <br>
+            <a class="footer__contacts-description" href="mailto:info@namu.kiev.ua">
+              e-mail: info@namu.kiev.ua
+            </a>
+            <br>
           </div>
         </div>
 
