--- a/src/index.html
+++ b/src/index.html
@@ -12,58 +12,81 @@
 
   <body class="page">
 
-    <div class="nav">
-      <input
-        class="nav__navCheckbox"
-        type="checkbox"
-        id="nav__switcher"
-      >
-
-      <label class="nav__navSwitcher" for="nav__switcher">
-        <div class="nav__navLine nav__navLine--first"></div>
-        <div class="nav__navLine nav__navLine--second"></div>
-        <div class="nav__navLine nav__navLine--third"></div>
-        <div class="nav__navLine nav__navLine--fourth"></div>
-      </label>
-
-      <nav class="nav__bar">
-        <p class="nav__abbr">
-          NA
-          <br>
-          MU
-        </p>
-
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a class="nav__link" href="#gallery">Галерея</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#events">Виставки та події</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#lection">Відвідування</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#subscription">Стати нашим другом</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="">Про Нас</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="">Магазин</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="">Блог</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#footer">Контакти</a>
-          </li>
-        </ul>
-
-      </nav>
-    </div>
-
     <div class="header page__block" id="header">
+
+      <div class="nav">
+        <input
+          class="nav__navCheckbox"
+          type="checkbox"
+          id="nav__switcher"
+        >
+
+        <label class="nav__navSwitcher" for="nav__switcher">
+          <div class="nav__navLine nav__navLine--first"></div>
+          <div class="nav__navLine nav__navLine--second"></div>
+          <div class="nav__navLine nav__navLine--third"></div>
+          <div class="nav__navLine nav__navLine--fourth"></div>
+        </label>
+
+        <nav class="nav__bar">
+
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#footer">
+                <p class="nav__abbr">
+                  NA
+                  <br>
+                  MU
+                </p>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#gallery">Галерея</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#events">Виставки та події</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#lection">Відвідування</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#subscription">Стати нашим другом</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="">Про Нас</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="">Магазин</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="">Блог</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#footer">Контакти</a>
+            </li>
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                target="blank"
+                href="https://www.google.com/search?hl=uk&sxsrf=ALeKk03595sDVwie3K7XaWZMLAPuG-u-Mw%3A1607779089500&source=hp&ei=EcPUX9XQG8mmaM-2v3g&q=%D0%BD%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9+%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%BD%D1%96%D0%B9+%D0%BC%D1%83%D0%B7%D0%B5%D0%B9+%D1%83%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8&oq=%D0%BD%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9+%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%BD%D1%96%D0%B9+%D0%BC%D1%83%D0%B7%D0%B5%D0%B9+%D1%83%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8&gs_lcp=CgZwc3ktYWIQAxgAMgUIABDLATIECAAQQzIECAAQQzIECAAQQzIECAAQQzIECAAQQzIECAAQQzICCAAyBQgAEMsBMgIIADoHCCMQ6gIQJzoECCMQJ1DRDljsI2ChLmgBcAB4AIABzQGIAb8RkgEGMC4xNi4xmAEAoAEBqgEHZ3dzLXdperABCg&sclient=psy-ab">
+                <img
+                  src="./images/nav__searchGlass.svg"
+                  alt="an icon of a search glass"
+                >
+              </a>
+            </li>
+
+          </ul>
+
+
+        </nav>
+      </div>
+
+      <p class="header__abbr">
+        NA
+        <br>
+        MU
+      </p>
 
       <picture class="header__img">
         <source
