added changes according to the mentor's suggestions

--- a/src/index.html
+++ b/src/index.html
@@ -419,6 +419,10 @@
         Designed by Zhyriada Marina
       </p>
 
+      <a class="footer__up" href="#header">
+        <img src="./images/footer_arrow.svg" alt="an icon of up arrow">
+      </a>
+
     </footer>
 
   </body>
