add big header on max viewport

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
   </head>
   <body class="page">
 
-
     <div class="container page__container">
 
       <header class="header container__header">
@@ -56,12 +55,11 @@
         </div>
 
         <h1 class="header__logo">
-          NA
-          MU
+          <a href="top" class="header__logo-link">
+            NA
+            MU
+          </a>
         </h1>
-
-
-
       </header>
 
       <div class="cutaway container__cutaway">
