--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,198 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/d82d87bba4cc0796a82bb1169a30c601.jpg">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+
+    <header class="header">
+      <div class="header__line">
+        <a href="" class="header__line-text">ПОДІЇ</a>
+      </div>
+      <div class="header__left-wrap">
+        <span class="toggler"></span>
+        <div class="header__content">
+          <h1 class="header__title">
+            ХУДОЖ
+            <span class="header__span">НIЙ</span>
+            <br>
+            МУЗЕЙ
+          </h1>
+          <h1 class="header__title-mobile">ХУДОЖНIЙ МУЗЕЙ</h1>
+        </div>
+        <a class="header__button" href="">Квитки</a>
+      </div>
+      <div class="header__right-wrap">
+        <img
+          class="header__img-items"
+          src="./images/hader-bcg.png"
+          alt=""
+        >
+        <img
+          class="header__logo"
+          src="./images/NA MU.png"
+          alt="Logo"
+        >
+      </div>
+    </header>
+
+    <main class="main">
+      <div class="event event__wrap">
+        <h2 class="event__h2">
+          Актуальні події
+        </h2>
+        <div class="event__fitst">
+          <div class="event__content-wrap">
+            <img
+              class="event__img"
+              src="./images/event.svg"
+              alt=""
+            >
+            <div class="event__item-wrap event__item-wrap--1">
+              <div class="event__date-wrap">
+                <h4 class="event__h4">Виставка</h4>
+                <p class="event__date">26.08-29.11.2019</p>
+              </div>
+              <h3 class="event__h3">Йду і повертаюсь</h3>
+              <p class="event__item">
+                Національний Художній Музей України презентує унікальну частину колекції
+                Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="event__second">
+          <div class="event__content-wrap">
+            <div class="event__item-wrap event__item-wrap--2">
+              <div class="event__date-wrap">
+                <h4 class="event__h4">Виставка</h4>
+                <p class="event__date">26.08-29.11.2019</p>
+              </div>
+              <h3 class="event__h3">І спогади і мрії</h3>
+              <p class="event__item">
+                Національний художній музей України до 100 річчя від дня народження
+                видатної української художниці  Тетяни Яблонської  відкриває
+                ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+            <img
+              class="event__img"
+              src="./images/event-2.svg"
+              alt=""
+            >
+          </div>
+        </div>
+      </div>
+      <div class="leacture">
+        <div class="leacture__block">
+          <div class="leacture__wrap">
+            <div class="leacture__date">
+              <p class="leacture__item-1">ЛЕКЦІЯ</p>
+              <p class="leacture__item-2">26/08/2019 - 11:00</p>
+            </div>
+            <p class="leacture__text">Від класицизму до<br>романтизму</p>
+          </div>
+        </div>
+      </div>
+      <div class="gallery">
+        <div class="gallery__wrap">
+          <h2 class="gallery__h2">Галерея</h2>
+          <div class="gallery__first-line">
+            <div class="gallery__item-1"></div>
+            <div class="gallery__item-2"></div>
+            <div class="gallery__item-3"></div>
+          </div>
+          <div class="gallery__second-line">
+            <div class="gallery__item-4"></div>
+            <div class="gallery__item-5"></div>
+            <div class="gallery__item-6"></div>
+          </div>
+        </div>
+      </div>
+      <div class="subscribing">
+        <div class="subscribing__wrap">
+          <h2 class="subscribing__h2">Підписка</h2>
+          <p class="subscribing__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form action="" class="subscribing__form">
+            <input
+              class="subscribing__input"
+              type="email"
+              placeholder="Email"
+              required
+            >
+            <button class="subscribing__btn"></button>
+          </form>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer">
+
+      <div class="footer__content-wrap">
+        <div class="footer__left">
+          <div class="footer__items">
+            <img
+              class="footer__logo"
+              src="./images/NA MU.png"
+              alt=""
+            >
+            <div class="footer__soc">
+              <img
+                class="footer__facebook"
+                src="./images/Facebook.svg"
+                alt=""
+              >
+              <img
+                class="footer__insta"
+                src="./images/insta.svg"
+                alt=""
+              >
+            </div>
+          </div>
+          <div class="footer__schedule">
+            <h4 class="footer__schedule-t">Графік роботи</h4>
+            <p class="footer__schedule-s footer__schedule-s-first">12:00 — 20:00 <span class="footer__schedule-t">середа</span></p>
+            <p class="footer__schedule-s">12:00 — 20:00 <span class="footer__schedule-t">четвер</span></p>
+            <p class="footer__schedule-s">12:00 — 20:00 <span class="footer__schedule-t">п’ятниця</span></p>
+            <p class="footer__schedule-s">11:00 — 19:00 <span class="footer__schedule-t">субота</span></p>
+            <p class="footer__schedule-s footer__schedule-s-last">11:00 — 19:00 <span class="footer__schedule-t">неділя</span></p>
+            <p class="footer__schedule-t"><span class="footer__schedule-s">Вихідні</span> понеділок, вівторок<br>Каса припиняє роботу за 1 годину<br>до закриття музею</p>
+          </div>
+          <div class="footer__contacts">
+            <h4 class="footer__schedule-t footer__h4">Контакти:</h4>
+            <p class="footer__schedule-t">
+              вул. М. Грушевського, 6; Київ, 01001
+              тел. +38 (044) 278-13-57
+              факс +38 (044) 278-74-54
+              e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+        </div>
+        <div class="footer__right">
+          <div class="footer__nav-l">
+            <a class="footer__link" href="">Галерея</a>
+            <a class="footer__link" href="">Виставки та події</a>
+            <a class="footer__link" href="">Відвідування</a>
+            <a class="footer__link" href="">Стати нашим другом</a>
+          </div>
+          <div class="footer__nav-r">
+            <a class="footer__link" href="">Про Нас</a>
+            <a class="footer__link" href="">Магазин</a>
+            <a class="footer__link" href="">Блог</a>
+            <a class="footer__link" href="">Контакти</a>
+          </div>
+        </div>
+      </div>
+      <div class="footer__b3">
+        <p class="footer__licens">Copyright © 2019. All Rights Reserved.</p>
+        <p class="footer__licens">Designed by Zhyriada Marina</p>
+      </div>
+      </div>
+    </footer>
+    <script src="./index.js"></script>
   </body>
 </html>
