Museum website with adaptive for mobile-screen

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,371 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Holla</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="container">
+    <div class="header container__section" id="header">
+
+      <div class="nav">
+        <input
+          class="nav__checkbox"
+          type="checkbox"
+          id="nav__switcher"
+        >
+
+        <label class="nav__navBurgerMenu" for="nav__switcher">
+          <div class="nav__burger nav__burger--one"></div>
+          <div class="nav__burger nav__burger--two"></div>
+          <div class="nav__burger nav__burger--three"></div>
+        </label>
+
+        <nav class="nav__bar">
+          <ul class="nav__list">
+            
+            <li class="nav__item">
+              <a class="nav__link" href="#events">Виставки та події</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#gallery">Галерея</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#subscription">Підписка</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="">Про Нас</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="">Магазин</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#footer">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <p class="header__namu">
+        NA
+        <br>
+        MU
+      </p>
+
+      <picture class="header__img">
+        <source
+          media="(max-width: 1200px)"
+          srcset="./images/header_small-image.svg"
+        >
+        <img
+          class="header__picture"
+          src="./images/header_big-image.svg"
+          alt="museum photo"
+        >
+      </picture>
+
+      <h1 class="header__title">
+        Худож
+        <br>
+        музей
+      </h1>
+      <span class="header__clear-text">
+        ній
+      </span>
+
+      <h1 class="header__title2">
+        Художній
+        <br>
+        музей
+      </h1>
+
+
+      <a class="header__button">
+        квитки
+      </a>
+
+      <a href="#events" class="header__nameContainer">
+        <p class="header__name">
+          події
+        </p>
+      </a>
+
+    </div>
+
+    <div class="events container__section" id="events">
+      <h2 class="events__title">
+        Актуальні події
+      </h2>
+
+      <div class="events__one">
+        <picture class="events__img">
+          <source
+            media="(max-width: 1440px)"
+            srcset="./images/events_first-small.svg"
+          >
+          <img
+            class="events__picture"
+            src="./images/events_first-big.svg"
+            alt="rock, sea and trees"
+          >
+        </picture>
+
+        <div class="events__container">
+          <div class="events__typeDate">
+            <p class="events__type">
+              ВИСТАВКА
+            </p>
+            <p class="events__date">
+              26.08-29.11.2019
+            </p>
+          </div>
+          <h3 class="events__name">
+            Йду і повертаюсь
+          </h3>
+          <p class="events__description">
+            Національний Художній Музей України презентує
+            унікальну частину колекції Градобанку - українське
+            мистецтво другої половини 1980-1995 років.
+          </p>
+        </div>
+
+      </div>
+
+      <div class="events__two">
+        <picture class="events__img">
+          <source
+            media="(max-width: 1440px)"
+            srcset="./images/events_second-small.svg"
+          >
+          <img
+            class="events__picture"
+            src="./images/events_second-big.svg"
+            alt="girl and firebird"
+          >
+        </picture>
+
+        <div class="events__container">
+          <div class="events__typeDate">
+            <p class="events__type">
+              ВИСТАВКА
+            </p>
+            <p class="events__date">
+              26.08-29.11.2019
+            </p>
+          </div>
+          <h3 class="events__name">
+            І спогади і мрії
+          </h3>
+          <p class="events__description">
+            Національний художній музей України до 100 річчя
+            від дня народження видатної української
+            художниці Тетяни Яблонської відкриває
+            ретроспективну ювілейну виставку «І спогади
+            і мрії».
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="lection container__section" id="lection">
+
+      <picture class="header__img">
+        <source
+          media="(max-width: 700px)"
+          srcset="./images/lection_img-700.svg"
+        >
+        <source
+          media="(max-width: 500px)"
+          srcset="./images/lection_img-500.svg"
+        >
+        <img
+          class="lection__img"
+          src="./images/lection_img.svg"
+          alt="red sky"
+        >
+      </picture>
+
+      <div class="lection__container">
+        <div class="lection__typeDate">
+          <p class="lection__type">
+            ЛЕКЦІЯ
+          </p>
+          <p class="lection__date">
+            26/08/2019 - 11:00
+          </p>
+        </div>
+        <h3 class="lection__name">
+          Від класицизму до романтизму
+        </h3>
+
+      </div>
+    </div>
+
+    <div class="gallery container__section" id="gallery">
+      <h2 class="gallery__title">
+        Галерея
+      </h2>
+
+      <div class="gallery__container">
+        <img
+          class="gallery__img gallery__img-1"
+          src="./images/gallery-1.svg"
+          alt="woman image"
+        >
+        <img
+          class="gallery__img gallery__img-2"
+          src="./images/gallery-2.svg"
+          alt="winter village"
+        >
+        <img
+          class="gallery__img gallery__img-3"
+          src="./images/gallery-3.svg"
+          alt="geese"
+        >
+        <img
+          class="gallery__img gallery__img-4"
+          src="./images/gallery-4.svg"
+          alt="people on bench"
+        >
+        <img
+          class="gallery__img gallery__img-5"
+          src="./images/gallery-5.svg"
+          alt="red sea image"
+        >
+        <img
+          class="gallery__img gallery__img-6"
+          src="./images/gallery-6.svg"
+          alt="people image"
+        >
+      </div>
+
+    </div>
+
+    <div class="subscription container__section" id="subscription">
+
+      <h2 class="subscription__title">
+        Підписка
+      </h2>
+
+      <p class="subscription__text">
+        Бути в курсі всіх актуальних подій та останніх новин.
+      </p>
+
+      <form
+        class="subscription__form"
+        action=""
+      >
+        <input
+          class="subscription__email"
+          type="email"
+          name="email"
+          autocomplete="off"
+          placeholder="E-mail"
+          required
+        >
+        <button
+          class="subscription__button"
+          type="submit"
+        >
+        </button>
+      </form>
+
+    </div>
+
+    <footer class="footer container__section container__section-footer" id="footer">
+
+      <p class="footer__namu">
+        NA
+        <br>
+        MU
+      </p>
+
+      <div class="footer__social">
+        <a href="https://www.facebook.com">
+          <img src="./images/footer_facebook.svg" alt="Facebook link">
+        </a>
+        <a href="https://www.instagram.com">
+          <img src="./images/footer_insta.svg" alt="Instagram link">
+        </a>
+      </div>
+
+      <div class="footer__schedule">
+        <p class="footer__text">
+          Графік роботи
+        </p>
+        <p class="footer__text">
+          <span class="footer__time">12:00— 20:00</span> середа
+          <br>
+          <span class="footer__time">12:00— 20:00</span> четвер
+          <br>
+          <span class="footer__time">12:00— 20:00</span> п’ятниця
+          <br>
+          <span class="footer__time">12:00— 20:00</span> субота
+          <br>
+          <span class="footer__time">12:00— 20:00</span> неділя
+        </p>
+        <p class="footer__text footer__text-weekend">
+          <strong>Вихідні</strong> понеділок, вівторок<br>
+          Каса припиняє роботу за 1 годину
+          до закриття музею
+        </p>
+      </div>
+
+      <div class="footer__contacts">
+        <p class="footer__text">
+          Контакти:
+        </p>
+        <p class="footer__text">
+          вул. М. Грушевського, 6;
+          <br>
+          Київ, 01001
+          <br>
+          <a class="footer__text" href="tel:+380442781357">
+            тел. +38 (044) 278-13-57
+          </a>
+          <br>
+          <a class="footer__text" href="tel:+380442787454">
+            факс +38 (044) 278-74-54
+          </a>
+          <br>
+          <a class="footer__text" href="mailto:info@namu.kiev.ua">
+            e-mail: info@namu.kiev.ua
+          </a>
+        </p>
+      </div>
+
+      <div class="footer__line"></div>
+
+      <div class="footer__links">
+        <a class="footer__text" href="#gallery">
+          Галерея
+        </a>
+        <a class="footer__text" href="#events">
+          Виставки та події
+        </a>
+        <a class="footer__text" href="">
+          Відвідування
+        </a>
+        <a class="footer__text" href="#subscription">
+          Стати нашим другом
+        </a>
+      </div>
+
+      <div class="footer__links-right">
+        <a class="footer__text" href="#">
+          Про Нас
+        </a>
+        <a class="footer__text" href="#">
+          Магазин
+        </a>
+        <a class="footer__text" href="#">
+          Блог
+        </a>
+        <a class="footer__text" href="#">
+          Контакти
+        </a>
+      </div>
+    </footer>
+
   </body>
 </html>
