Added hover and fixed visual part

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,9 @@
 
         <ul class="nav__list">
           <li class="nav__item">
-            <h2 class="nav__logo">na<br>mu</h2>
+            <a href="#header">
+              <h2 class="nav__logo">na<br>mu</h2>
+            </a>
           </li>
 
           <li class="nav__item">
