--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
         <div class="header__ticket ticket">
           <a class="ticket__side">Квитки</a>
-          <a class="ticket__button">
+          <a class="ticket__button ticket__button--primary">
             <img
             class="ticket__svg"
             src="./images/Vector.svg"
@@ -184,7 +184,7 @@
         </div>
 
       </div>
-      <div class="tickets__button tickets__button--primary"></div>
+      <div class="ticket__button ticket__button--primary"></div>
     </section>
 
     <footer class="footer">
@@ -200,7 +200,13 @@
               type="text"
               placeholder="E-mail"
             >
-            <div class="field__button tickets__button tickets__button--secondary"></div>
+            <a class="ticket__button ticket__button--secondary">
+              <img
+                class="ticket__svg"
+                src="./images/Vector.svg"
+                alt=""
+                >
+            </a>
           </div>
         </div>
 
