--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,29 @@
   <body>
 
     <section class="header">
+
+      <nav role="navigation" class="navigation">
+        <div id="menuToggle">
+          <input type="checkbox">
+
+          <span></span>
+          <span></span>
+          <span></span>
+
+          <ul id="menu">
+            <a href="#"><li>Галерея</li></a>
+            <a href="#"><li>Вистаки та події</li></a>
+            <a href="#"><li>Відвідування</li></a>
+            <a href="#"><li>Стати нашим другом</li></a>
+            <a href="№"><li>Про нас</li></a>
+          </ul>
+        </div>
+      </nav>
+      <a class="namu">
+        NA
+        <br>
+        MU
+      </a>
       <div class="header__content">
         <div class="header__main-title">
           <h2 class="header__title">
